add proper logic for proposal and hold